--- a/week4/week4-seq2seq.ipynb
+++ b/week4/week4-seq2seq.ipynb
@@ -43,10 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random"
@@ -54,10 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_equations(allowed_operators, dataset_size, min_value, max_value):\n",
@@ -78,6 +74,14 @@
     "        ######################################\n",
     "        ######### YOUR CODE HERE #############\n",
     "        ######################################\n",
+    "        integer1=random.randint(min_value, max_value)\n",
+    "        integer2=random.randint(min_value, max_value)\n",
+    "        operator=allowed_operators[random.randint(0, len(allowed_operators)-1)]\n",
+    "        if operator == '+':\n",
+    "            solution=integer1+integer2\n",
+    "        elif operator == '-':\n",
+    "            solution=integer1-integer2\n",
+    "        sample.append((str(integer1)+str(operator)+str(integer2), str(solution)))\n",
     "    return sample"
    ]
   },
@@ -90,10 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def test_generate_equations():\n",
@@ -109,11 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_generate_equations())"
    ]
@@ -127,10 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
@@ -138,10 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "allowed_operators = ['+', '-']\n",
@@ -1049,7 +1053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1063,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
