--- a/week4/week4-seq2seq.ipynb
+++ b/week4/week4-seq2seq.ipynb
@@ -77,10 +77,9 @@
     "        integer1=random.randint(min_value, max_value)\n",
     "        integer2=random.randint(min_value, max_value)\n",
     "        operator=allowed_operators[random.randint(0, len(allowed_operators)-1)]\n",
-    "        if operator == '+':\n",
-    "            solution=integer1+integer2\n",
-    "        elif operator == '-':\n",
-    "            solution=integer1-integer2\n",
+    "        solution=stinteger1+integer2\n",
+    "        #elif operator == '-':\n",
+    "        #    solution=integer1-integer2\n",
     "        sample.append((str(integer1)+str(operator)+str(integer2), str(solution)))\n",
     "    return sample"
    ]
