--- a/week4/week4-seq2seq.ipynb
+++ b/week4/week4-seq2seq.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,7 @@
     "        integer1=random.randint(min_value, max_value)\n",
     "        integer2=random.randint(min_value, max_value)\n",
     "        operator=allowed_operators[random.randint(0, len(allowed_operators)-1)]\n",
-    "        solution=stinteger1+integer2\n",
-    "        #elif operator == '-':\n",
-    "        #    solution=integer1-integer2\n",
+    "        solution=eval(str(integer1)+operator+str(integer2))\n",
     "        sample.append((str(integer1)+str(operator)+str(integer2), str(solution)))\n",
     "    return sample"
    ]
@@ -93,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,10 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
     "word2id = {symbol:i for i, symbol in enumerate('^$#+-1234567890')}\n",
@@ -188,10 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "start_symbol = '^'\n",
@@ -239,10 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sentence_to_ids(sentence, word2id, padded_len):\n",
@@ -255,9 +247,11 @@
     "      result: a tuple of (a list of ids, an actual length of sentence).\n",
     "    \"\"\"\n",
     "    \n",
-    "    sent_ids = ######### YOUR CODE HERE #############\n",
-    "    sent_len = ######### YOUR CODE HERE #############\n",
-    "    \n",
+    "    sent_ids = [word2id[symbol] for i, symbol in enumerate(sentence) if i < (padded_len)-1]\n",
+    "    sent_ids.append(word2id[end_symbol])\n",
+    "    if padded_len>len(sentence):\n",
+    "        sent_ids+=[word2id[padding_symbol]]*(padded_len-len(sent_ids))\n",
+    "    sent_len = min(len(sentence), padded_len-1)+1\n",
     "    return sent_ids, sent_len"
    ]
   },
@@ -270,10 +264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 58,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def test_sentence_to_ids():\n",
@@ -294,11 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests passed.\n"
+     ]
+    }
+   ],
    "source": [
     "print(test_sentence_to_ids())"
    ]
@@ -312,10 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 60,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def ids_to_sentence(ids, id2word):\n",
