--- a/week4/week4-seq2seq.ipynb
+++ b/week4/week4-seq2seq.ipynb
@@ -342,10 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def batch_to_ids(sentences, word2id, max_len):\n",
@@ -379,10 +377,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_batches(samples, batch_size=64):\n",
@@ -406,11 +402,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input: ('8732+8114', '16846')\n",
+      "Ids: [[12, 11, 7, 6, 3, 12, 5, 5, 8, 1], [5, 10, 12, 8, 10, 1, 2, 2, 2, 2]]\n",
+      "Sentences lengths: [10, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "sentences = train_set[0]\n",
     "ids, sent_lens = batch_to_ids(sentences, word2id, max_len=10)\n",
@@ -429,10 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 64,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf"
@@ -447,10 +449,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 65,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Seq2SeqModel(object):\n",
@@ -472,10 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 68,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def declare_placeholders(self):\n",
@@ -486,19 +484,17 @@
     "    self.input_batch_lengths = tf.placeholder(shape=(None, ), dtype=tf.int32, name='input_batch_lengths')\n",
     "    \n",
     "    # Placeholders for groundtruth and its actual lengths.\n",
-    "    self.ground_truth = ######### YOUR CODE HERE #############\n",
-    "    self.ground_truth_lengths = ######### YOUR CODE HERE #############\n",
+    "    self.ground_truth = tf.placeholder(shape=(None, None), dtype=tf.int32, name='ground_truth')\n",
+    "    self.ground_truth_lengths = tf.placeholder(shape=(None, ), dtype=tf.int32, name='ground_truth_lengths')\n",
     "        \n",
     "    self.dropout_ph = tf.placeholder_with_default(tf.cast(1.0, tf.float32), shape=[])\n",
-    "    self.learning_rate_ph = ######### YOUR CODE HERE ############# "
+    "    self.learning_rate_ph = tf.placeholder(shape=[], dtype=tf.float32)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.__declare_placeholders = classmethod(declare_placeholders)"
@@ -515,28 +511,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_embeddings(self, vocab_size, embeddings_size):\n",
     "    \"\"\"Specifies embeddings layer and embeds an input batch.\"\"\"\n",
     "     \n",
     "    random_initializer = tf.random_uniform((vocab_size, embeddings_size), -1.0, 1.0)\n",
-    "    self.embeddings = ######### YOUR CODE HERE ############# \n",
+    "    self.embeddings = tf.Variable(name='embeddings', dtype=tf.float32, initial_value=random_initializer)\n",
     "    \n",
     "    # Perform embeddings lookup for self.input_batch. \n",
-    "    self.input_batch_embedded = ######### YOUR CODE HERE ############# "
+    "    self.input_batch_embedded = tf.nn.embedding_lookup(params=self.embeddings, ids=self.input_batch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 72,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.__create_embeddings = classmethod(create_embeddings)"
@@ -558,28 +550,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 73,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_encoder(self, hidden_size):\n",
     "    \"\"\"Specifies encoder architecture and computes its output.\"\"\"\n",
     "    \n",
     "    # Create GRUCell with dropout.\n",
-    "    encoder_cell = ######### YOUR CODE HERE #############\n",
-    "    \n",
+    "    encoder_cell = tf.contrib.rnn.DropoutWrapper(\n",
+    "        tf.contrib.rnn.GRUCell(hidden_size),\n",
+    "        input_keep_prob = self.dropout_ph,\n",
+    "        dtype=tf.float32\n",
+    "    )\n",
     "    # Create RNN with the predefined cell.\n",
-    "    _, self.final_encoder_state = ######### YOUR CODE HERE #############"
+    "    _, self.final_encoder_state = tf.nn.dynamic_rnn(\n",
+    "        encoder_cell, \n",
+    "        inputs=self.input_batch_embedded, \n",
+    "        sequence_length=self.input_batch_lengths,\n",
+    "        dtype=tf.float32\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 74,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.__build_encoder = classmethod(build_encoder)"
@@ -618,10 +614,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 129,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def build_decoder(self, hidden_size, vocab_size, max_iter, start_symbol_id, end_symbol_id):\n",
@@ -644,7 +638,7 @@
     "    ground_truth_as_input = tf.concat([tf.expand_dims(start_tokens, 1), self.ground_truth], 1)\n",
     "    \n",
     "    # Use the embedding layer defined before to lookup embedings for ground_truth_as_input. \n",
-    "    self.ground_truth_embedded = ######### YOUR CODE HERE #############\n",
+    "    self.ground_truth_embedded = tf.nn.embedding_lookup(self.embeddings, ground_truth_as_input)\n",
     "     \n",
     "    # Create TrainingHelper for the train stage.\n",
     "    train_helper = tf.contrib.seq2seq.TrainingHelper(self.ground_truth_embedded, \n",
@@ -652,7 +646,7 @@
     "    \n",
     "    # Create GreedyEmbeddingHelper for the inference stage.\n",
     "    # You should provide the embedding layer, start_tokens and index of the end symbol.\n",
-    "    infer_helper = ######### YOUR CODE HERE #############\n",
+    "    infer_helper = tf.contrib.seq2seq.GreedyEmbeddingHelper(self.embeddings, start_tokens, end_symbol_id)\n",
     "    \n",
     "  \n",
     "    def decode(helper, scope, reuse=None):\n",
@@ -660,14 +654,19 @@
     "        \n",
     "        with tf.variable_scope(scope, reuse=reuse):\n",
     "            # Create GRUCell with dropout. Do not forget to set the reuse flag properly.\n",
-    "            decoder_cell = ######### YOUR CODE HERE #############\n",
+    "            decoder_cell = tf.contrib.rnn.DropoutWrapper(\n",
+    "                tf.contrib.rnn.GRUCell(hidden_size, reuse=reuse),\n",
+    "                input_keep_prob=self.dropout_ph\n",
+    "            )\n",
     "            \n",
     "            # Create a projection wrapper.\n",
     "            decoder_cell = tf.contrib.rnn.OutputProjectionWrapper(decoder_cell, vocab_size, reuse=reuse)\n",
     "            \n",
     "            # Create BasicDecoder, pass the defined cell, a helper, and initial state.\n",
     "            # The initial state should be equal to the final state of the encoder!\n",
-    "            decoder = ######### YOUR CODE HERE #############\n",
+    "            decoder = tf.contrib.seq2seq.BasicDecoder(cell=decoder_cell, \n",
+    "                                                      helper=helper, \n",
+    "                                                      initial_state=self.final_encoder_state)\n",
     "            \n",
     "            # The first returning argument of dynamic_decode contains two fields:\n",
     "            #   rnn_output (predicted logits)\n",
@@ -683,10 +682,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 130,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.__build_decoder = classmethod(build_decoder)"
@@ -701,10 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 142,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def compute_loss(self):\n",
@@ -712,15 +707,17 @@
     "    \n",
     "    weights = tf.cast(tf.sequence_mask(self.ground_truth_lengths), dtype=tf.float32)\n",
     "    \n",
-    "    self.loss = ######### YOUR CODE HERE #############"
+    "    self.loss = tf.contrib.seq2seq.sequence_loss(\n",
+    "        logits=self.train_outputs.rnn_output,\n",
+    "        targets=self.ground_truth,\n",
+    "        weights=weights\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 143,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.__compute_loss = classmethod(compute_loss)"
@@ -736,24 +733,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 144,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def perform_optimization(self):\n",
     "    \"\"\"Specifies train_op that optimizes self.loss.\"\"\"\n",
     "    \n",
-    "    self.train_op = ######### YOUR CODE HERE #############"
+    "    self.train_op = tf.contrib.layers.optimize_loss(\n",
+    "        loss=self.loss,\n",
+    "        optimizer='Adam',\n",
+    "        learning_rate=self.learning_rate_ph,\n",
+    "        clip_gradients=1.0,\n",
+    "        global_step=tf.train.get_global_step()\n",
+    "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 145,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.__perform_optimization = classmethod(perform_optimization)"
@@ -769,10 +768,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 146,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def init_model(self, vocab_size, embeddings_size, hidden_size, \n",
@@ -794,10 +791,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 147,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.__init__ = classmethod(init_model)"
@@ -814,10 +809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 148,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train_on_batch(self, session, X, X_seq_len, Y, Y_seq_len, learning_rate, dropout_keep_probability):\n",
@@ -838,10 +831,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 149,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.train_on_batch = classmethod(train_on_batch)"
@@ -856,21 +847,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 150,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predict_for_batch(self, session, X, X_seq_len):\n",
-    "    feed_dict = ######### YOUR CODE HERE #############\n",
+    "    feed_dict = {\n",
+    "        self.input_batch: X,\n",
+    "        self.input_batch_lengths: X_seq_len,      \n",
+    "    }\n",
     "    pred = session.run([\n",
     "            self.infer_predictions\n",
     "        ], feed_dict=feed_dict)[0]\n",
     "    return pred\n",
     "\n",
     "def predict_for_batch_with_loss(self, session, X, X_seq_len, Y, Y_seq_len):\n",
-    "    feed_dict = ######### YOUR CODE HERE #############\n",
+    "    feed_dict = {\n",
+    "        self.input_batch: X,\n",
+    "        self.input_batch_lengths: X_seq_len,  \n",
+    "        self.ground_truth: Y,\n",
+    "        self.ground_truth_lengths: Y_seq_len\n",
+    "    }\n",
     "    pred, loss = session.run([\n",
     "            self.infer_predictions,\n",
     "            self.loss,\n",
@@ -880,10 +877,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 151,
+   "metadata": {},
    "outputs": [],
    "source": [
     "Seq2SeqModel.predict_for_batch = classmethod(predict_for_batch)\n",
@@ -915,21 +910,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 152,
+   "metadata": {},
    "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "\n",
-    "model = ######### YOUR CODE HERE #############\n",
+    "model = Seq2SeqModel(\n",
+    "    vocab_size = len(word2id),\n",
+    "    embeddings_size = 20,\n",
+    "    max_iter = 7,\n",
+    "    hidden_size = 512,\n",
+    "    start_symbol_id = word2id['^'],\n",
+    "    end_symbol_id = word2id['$'],\n",
+    "    padding_symbol_id=word2id['#']\n",
+    ")\n",
     "\n",
-    "batch_size = ######### YOUR CODE HERE #############\n",
-    "n_epochs = ######### YOUR CODE HERE #############\n",
-    "learning_rate = ######### YOUR CODE HERE #############\n",
-    "dropout_keep_probability = ######### YOUR CODE HERE #############\n",
-    "max_len = ######### YOUR CODE HERE #############\n",
+    "batch_size = 128\n",
+    "n_epochs = 10\n",
+    "learning_rate = 0.001\n",
+    "dropout_keep_probability = 0.5\n",
+    "max_len = 20\n",
     "\n",
     "n_step = int(len(train_set) / batch_size)"
    ]
